KSENROLL-12687: spacing fix for manage CO search
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69429 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2128,7 +2128,7 @@ section.uif-disclosure {
 }
 
 #courseOfferingManagementCriteriaSection .uif-label{
-    margin-top: 5px;
+    margin: 5px 5px 0 0;
 }
 
 #termCodeField_label{
